<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My GaTech</string>
    <string name="SENDER_ID">216377588241</string>
    <string name="action_settings">Settings</string>
    <string name="sting">Stingerette</string>
    <string name="bus">Next Bus</string>
    <string name="tsquare">T-Square</string>
    <string name="eat">Where To Eat</string>
    <string name="now">Now</string>
    <string name="map">Map</string>
    <string name="handler">Handler</string>
    <string name="reserve">Reserve Room For Me</string>
    <string name="tsquareclass">TsquareClass</string>
    <string name="login_title">Login for first time</string>
    <string name="login_user_hint">My GaTech Username</string>
    <string name="login_pass_hint">My GaTech Password</string>
    <string name="login_button">Login</string>
    <string name="send">Send</string>
    <string name="mail_title">Sending feedback for better GaTech</string>
    <string name="calendar">GaTech Calendar</string>
    <string name="about">About</string>
    <string name="buzzport">BuzzPort</string>
    <string name="update">Update</string>
    <string name="loginSetting">Login Settings</string>
    <string name="Settings">Menu Settings</string>
    <string name="iAmDoing">I AM DOING THAT</string>
    <string name="admin">Joseph admin</string>
    <string name="menuList">Menu List</string>
    <string name="passVisi">Password Visible</string>
    <string name="gtmail">GT Email</string>
    <string name="impress">Impression</string>
    <string name="tsquaremenu">T-Square Boards</string>
    <string name="mainT">Maintenanace</string>
    <string name="subMenu">T-Square Contents</string>
    <string name="finalMenu">Tsquare Final Menu</string>
    <string name="description">description for images</string>
    <string name="qbot">Link To QBot</string>
    <string name="bigLogo">Big Logo description</string>
    <string name="symbol">Symbol</string>
    <string name="googleMap">Google Map</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_global_description">search_global_description</string>
    <string name="search_label">search_label</string>
    <string name="search_hint">search_hint</string>
    <string name="buzzport">Buzzport</string>
    <string name="oscar">Oscar</string>
    <string name="empty_string"></string>
    <string name="load"> Load</string>
    <string name="set_time">Set Time</string>
    <string name="tab1">Tab 1</string>
    <string name="tab2">Tab 2</string>
    <string name="tab3">Tab 3</string>
    <string name="tab4">Tab 4</string>
    <string name="anony">Anonymous</string>
    <string name="search_label">Dictionary</string>
    <string name="search_hint">Search the building</string>
    <string name="menu_search">Search</string>
    <string name="settings_description">Definitions of words</string>
    <string name="search_instructions">Use the search box in the Action Bar to look up a word</string>
    <string name="user_agreement">I accept the Terms of service and like to contiue.</string>
    <string name="guest">Guest</string>
    <string name="GUEST">  Guest  </string>
    <string name="STUDENT">   Student   </string>
    
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    

    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->

    <string name="no_results">No results found for \"%s\"</string>

    <string-array name="menus">
        <item>T-Square</item>
        <item>Buzzport</item>
        <item>NextBus</item>
        <item>Stingerette</item>
        <item>Where To Eat</item>
        <item>GT Mail</item>
        <item>Reserve Room 4 Me</item>
        <item>Maintenance</item>
        <item>Calendar</item>
        <item>QBot</item>
        <item>GT Map</item>
    </string-array>
    <string-array name="contribute">
        <item>Programming</item>
        <item>UI Design</item>
        <item>Marketing</item>
        <item>Other</item>
    </string-array>

</resources>